modified:   pom.xml (lombok removed, spring boot test added, surfire plugin added) Getters and setter added instead of lombok in all model and dto classes.
modified:   CreateEmployeeController.java  (validateDepartment corrected)
modified:   CycleViewController.java (SuppressWarnings annotation added, SneakyThrows removed)
modified:   DepartmentListViewController.java
modified:   EditActPhaseController.java
modified:   EditCheckPhaseController.java
modified:   EditDoPhaseController.java
modified:   EditPlanPhaseController.java
modified:   EmployeeListViewController.java
modified:   LoginController.java
modified:   ProductListViewController.java
modified:   ProjectListViewController.java
modified:   ShowCycleListController.java
modified:   ActPhaseReadDto.java
modified:   ActPhaseWriteApiDto.java
modified:   CheckPhaseReadDto.java
modified:   CheckPhaseWriteDto.java
modified:   DepartmentReadDto.java
modified:   DepartmentWriteDto.java
modified:   DoPhaseReadDto.java
modified:   DoPhaseWriteApiDto.java
modified:   EmployeeReadDto.java
modified:   EmployeeWriteApiDto.java
modified:   PlanPhaseReadDto.java
modified:   PlanPhaseWriteApiDto.java
modified:   ProductReadDto.java
modified:   ProductWriteDto.java
modified:   ProjectReadDto.java
modified:   ProjectWriteApiDto.java
modified:   TaskWriteDto.java
modified:   UserWriteDto.java
new file:   PopupFactory.java
modified:   ActPhaseTask.java
modified:   Cycle.java
modified:   Department.java
modified:   DoPhaseTask.java
modified:   Employee.java
modified:   PlanPhase.java
modified:   Product.java
modified:   Project.java
modified:   Task.java
modified:   Authenticator.java (waitingPopupStage added as argument)
modified:   CustomAuthenticatorProvider.java
modified:   module-info.java
new file:   CreateProjectControllerTest.java
new file:   LoginControllerTest.java